style: arrow animation alignment fixes

--- a/src/styles/LinkButton.module.sass
+++ b/src/styles/LinkButton.module.sass
@@ -32,7 +32,7 @@
         background: transparent
         border-color: var(--blue)
         .arrow
-            animation: arrow 1s ease-in-out 
+            animation: arrow .6s ease-in-out 
 
 
 .arrow
@@ -43,13 +43,13 @@
 @keyframes arrow
     0%
         transform: translateX(0)
-    50%
+    20%
         transform: translateX(50px)
         opacity: 0
-    65%
+    40%
         transform: translateX(-100px)
     70%
-        transform: translateX(-20px)
+        transform: translateX(-60px)
         opacity: 1
     100%
         transform: translateX(0)
